[package]
name = "poem-api"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = {version="1", features=["derive"]}
serde_json = "1"
tracing = "0.1"
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"
validator = { version = "0.20.0", features = ["derive"] }
shuttle-poem = "0.52.0"
shuttle-runtime = "0.52.0"
